--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/node": "^24.5.1",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "tailwindcss": "^4",
+    "typescript": "^5.9.2"
   }
 }
